--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"test": "jest --watchAll",
 		"start": "webpack-dev-server --hot --open",
 		"build": "webpack --config webpack.config.js --mode production"
 	},
@@ -20,12 +21,15 @@
 	"homepage": "https://github.com/SebastianDarie/battleship#readme",
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/preset-env": "^7.11.5",
 		"babel-loader": "^8.1.0",
+		"babel-plugin-transform-class-properties": "^6.24.1",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^4.2.2",
 		"file-loader": "^6.1.0",
 		"html-webpack-plugin": "^4.4.1",
+		"jest": "^26.4.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
